Avoid using (1<<64)-1 for VM_MAX{,USER}_ADDRESS as rounding that up to the next page boundary gives 0 and instead make the VA space end one page earlier.

Fixes PR sparc64/57219.